# SimpleOCR

./: CMakeLists.txt  app_win32.rc  appsettings.cpp  appsettings.h  assets.qrc  baidubcsapi.cpp  baidubcsapi.h  baidutranslateapi.cpp  baidutranslateapi.h  clipboardthread.cpp  clipboardthread.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  networkapi.cpp  networkapi.h  qswitchbutton.cpp  qswitchbutton.h  settingform.cpp  settingform.h  settingform.ui  utils.cpp  utils.h
